--- a/components/navbar.html
+++ b/components/navbar.html
@@ -32,10 +32,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                            <a class="nav-link" href="../pages/services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="technology.html">Technology</a>
+                            <a class="nav-link" href="../pages/technology.html">Technology</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -49,7 +49,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blogs.html">Blogs</a>
+                            <a class="nav-link" href="../pages/blogs.html">Blogs</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
