--- a/components/navbar.css
+++ b/components/navbar.css
@@ -1,12 +1,48 @@
-        * {
-            box-sizing: border-box;
-        }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-        nav {
-            font-size: 1.2rem;
-        }
+nav {
+    font-size: 18px;
+    font-family: "Inter", sans-serif;
+}
 
-        .nav-link.active {
-            font-weight: bold;
-        }
-        
+.nav-link.active {
+    font-weight: bold;
+    font-family: "Inter", sans-serif;
+    font-weight: 800 !important;
+}
+
+.nav-sec {
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.container-fluid {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btn {
+    cursor: pointer;
+    color: #fff;
+    background-color: #00aeef ;
+    font-family: Inter, sans-serif;
+    font-weight: 600 !important;
+    font-size: 18px;
+    border-radius: 1px;
+    padding: 5px 15px 7px;
+    text-decoration: none;
+    border: 2px solid #00aeef;
+    text-transform: capitalize;
+    background-size: 200% 200%;
+}
+
+.btn:hover {
+    background-image: linear-gradient(90deg, #00aeef 50%, #fff 0) !important;
+    transition: background-position .5s, color .5s ease !important;
+}
