--- a/components/navbar.html
+++ b/components/navbar.html
@@ -10,63 +10,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="./assets/css/button-style.css">
 
 </head>
-
 <body>
     <div class="bg-light">
-        <nav class="navbar navbar-nav navbar-expand-xl navbar-light bg-white m-4 rounded">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="">
-                    <img src="../assets/images/orcalo-logo.png" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/services.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/technology.html">Technology</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Careers
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Careers</a></li>
-                                <li><a class="dropdown-item" href="#">Work With Us</a></li>
-                                <li><a class="dropdown-item" href="#">Where Could You Work At Orcalo Holdings</a></li>
+        <header>
+            <div class="nav-sec">
+                <nav class="navbar navbar-nav navbar-expand-xl navbar-light bg-white m-3 rounded">
+                    <div class="container-fluid m-0 p-0">
+                        <a class="navbar-brand ms-4" href="">
+                            <img src="../assets/images/orcalo-logo.png" height="75px" width="100%" alt="image">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item pe-3">
+                                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                </li>
+                                <li class="nav-item pe-3">
+                                    <a class="nav-link" href="../pages/services.html">Services</a>
+                                </li>
+                                <li class="nav-item pe-3">
+                                    <a class="nav-link" href="../pages/technology.html">Technology</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+                                        Careers
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Careers</a></li>
+                                        <li><a class="dropdown-item" href="#">Work With Us</a></li>
+                                        <li><a class="dropdown-item" href="#">Where Could You Work At Orcalo
+                                                Holdings</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item pe-3">
+                                    <a class="nav-link" href="../pages/blogs.html">Blogs</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+                                        Company
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Company Profile</a></li>
+                                        <li><a class="dropdown-item" href="#">Leadership Voice</a></li>
+                                        <li><a class="dropdown-item" href="#">Partners</a></li>
+                                        <li><a class="dropdown-item" href="#">Industries</a></li>
+                                    </ul>
+                                </li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/blogs.html">Blogs</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Company
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Company Profile</a></li>
-                                <li><a class="dropdown-item" href="#">Leadership Voice</a></li>
-                                <li><a class="dropdown-item" href="#">Partners</a></li>
-                                <li><a class="dropdown-item" href="#">Industries</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <button class="btn btn-primary btn-lg m-4 navbar-btn" type="button">Contact Us</button>
-                </div>
+                            <button class="btn btn-primary btn-lg m-4 navbar-btn" type="button">Contact Us</button>
+                        </div>
+                    </div>
+                </nav>
             </div>
-        </nav>
+        </header>
     </div>
 </body>
