--- a/components/navbar.css
+++ b/components/navbar.css
@@ -28,21 +28,17 @@ nav {
 }
 
 .btn {
+    padding: 5px 15px 7px 15px !important;
+    border-radius: 3px !important;
     cursor: pointer;
-    color: #fff;
-    background-color: #00aeef ;
+    color: #fff !important;
+    background-color: #00aeef !important;
     font-family: Inter, sans-serif;
-    font-weight: 600 !important;
     font-size: 18px;
-    border-radius: 1px;
-    padding: 5px 15px 7px;
-    text-decoration: none;
-    border: 2px solid #00aeef;
+    border: 2px solid #00aeef !important;
     text-transform: capitalize;
     background-size: 200% 200%;
 }
-
-.btn:hover {
-    background-image: linear-gradient(90deg, #00aeef 50%, #fff 0) !important;
-    transition: background-position .5s, color .5s ease !important;
+.btn:hover{
+    background-image: linear-gradient(90deg,#00aeef 50%,#fff 0);
 }
