--- a/components/services.css
+++ b/components/services.css
@@ -54,8 +54,10 @@
 
 .card:hover, .card-r:hover {
     background-position: right bottom;
-    color: #fff;
-    border-color: #fff;
+    color: #fff !important;
+    border: 2px solid #00aeef !important;
+
+
 }
 
 .card-p {
